@@ -1,5 +1,9 @@
 2008-01-10 Sancho Lerena <slerena@gmail.com>
 
+	* pandoradbdata_13_to_14.sql: Correct build and version.
+
+	* tactical.php: Fixed problem with networkserver stats.
+
         Code merged from 1.3.1 branch:
 
         * functions_db.php: Some changes in future generic SQL interface access.
